plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.14'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.drewnoakes:metadata-extractor:2.19.0'
}

group = 'imagemanager'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

application {
    mainClass = 'imagemanager.MainApp'
    applicationDefaultJvmArgs = [
        "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005"
    ]
}

javafx {
    version = "23"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

tasks.named('run') {
    doFirst {
        jvmArgs = [
            '--module-path', files(configurations.runtimeClasspath).asPath,
            '--add-modules', 'javafx.controls,javafx.fxml'
        ]
    }
}
